[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://assets/light.png" type="Texture" id=3]
[ext_resource path="res://assets/pistol.png" type="Texture" id=4]
[ext_resource path="res://bullet/bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://analog/Analog.tscn" type="PackedScene" id=6]
[ext_resource path="res://analog/AnalogTembak.tscn" type="PackedScene" id=7]
[ext_resource path="res://analog/joystick.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/music/shoot.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/playerkedip.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 10 ), ExtResource( 1 ) ],
"loop": false,
"name": "kedip",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 12 ), Vector2( 0, -12 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "kedip"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 2 ]
}

[sub_resource type="Animation" id=4]

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )
jumlah_peluru = 10
peluru = ExtResource( 5 )
speed = 140

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 19.0131, 18.4597, 19.1555, 6.07125, 27.272, 6.07125, 27.1296, -2.61487, 37.6669, -2.47247, 37.8093, -6.60194, 19.2979, -6.45954, 19.4403, -19.1203, -19.2831, -18.9779, -19.1407, 19.0417 )

[node name="karakter" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="pistol" type="Sprite" parent="."]
position = Vector2( 30, 0 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 18.8769, 18.6944, 19.458, 6.29694, 27.2065, 6.29694, 27.4002, -2.42006, 35.7297, -2.42006, 40.9599, -2.42006, 40.5725, -6.6817, 19.2643, -6.29428, 19.458, -19.4666, -19.2842, -19.2729, -19.2842, 19.2756 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.15778, 0 )
texture = ExtResource( 3 )
texture_scale = 2.0
energy = 2.0
shadow_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, 12 )
current = true
zoom = Vector2( 0.7, 0.7 )
smoothing_enabled = true

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( 58, -4 )
scale = Vector2( 0.5, 0.5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "kedip"
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/camerashake = SubResource( 2 )
anims/kedip = SubResource( 3 )
anims/mata = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Analog" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false

[node name="AnalogTembak" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false

[node name="joystick" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
position = Vector2( 200, 464 )

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="musik" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="musik"]
stream = ExtResource( 9 )

[node name="kedip" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="kedip" to="." method="_on_kedip_timeout"]
